2005-01-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/aboutdialog.hg: Add logo_icon_name proeprty.
	* gtk/src/iconview.hg: Wrap the properties.

2005-01-07  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Offline documentation tarball: Do not try to tar up non 
	existant docs/internals directory. Put 2-4 in the tarball name to 
	avoid confusion.
	* docs/index.html: Correct the offline documentation link, so that 
	people do not download the tarball for the 2.0 documentation instead.
	Bug #163122.

2005-01-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/modelfilter.hg: Added documentation for set_modify_func().
	* pango/src/renderer.hg: Added get_color(),
	* pango/src/color.hg: Added operator bool() so that people can check 
	for a null Color returned by Renderer::get_color().

2005-01-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entrycompletion.hg, toolitem.hg: Added //TODO comments 
	to tell us to add default signal handlers when we can break ABI. Also 
	remove an extra ; to avoid a warning and fix the build.

2005-01-06  Bryan Forbes  <bryan@reigndropsfall.net>

	* updated .cvsignore files.
	* gtk/gtkmm/stock.[h|cc]: Added new stock items.
	* gtk/src/entrycompletion.hg: Changed to use no_default_handler on
	insert_prefix signal.
	* gtk/src/filechooserdialog.[hg|ccg]:
	* gtk/src/filechooserwidget.[hg|ccg]: Added constructors to choose the
	backend used.
	* gtk/src/main.[hg|ccg]: Added commented constructors for gtk_init_with_args
	so we can take a look at it.
	* gtk/src/toolitem.hg: Changed to use no_default_handler on set_tooltip
	signal.

2005-01-06  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbufloader.hg, gtk/src/cellrenderer.hg, gtk/src/range.hg:
	For the signals that are new in gtkmm 2.5, use the extra 
	no_default_handler argument with _WRAP_SIGNAL(), to avoid adding new 
	virtual functions which would break the ABI by increasing the size 
	of base class objects.

2005-01-06  Murray Cumming  <murrayc@murrayc.com>
