@@ -1,3 +1,9 @@
+2005-01-09  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/examples/treeview/list/examplewindow.[h|cc]: Add an extra 
+	model column, rendered with a CellRendererProgress, to show that it 
+	works.
+
 2005-01-08  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/aboutdialog.hg: Add logo_icon_name proeprty.
